language/move-lang/tests/move_check/typing/declare_wrong_arity.exp
error: 

   ┌── tests/move_check/typing/declare_wrong_arity.move:5:13 ───
   │
 5 │         let x: ();
   │             ^ Invalid list-binding. The list-binding expected 1 argument(s) but got 0
   ·
 5 │         let x: ();
   │                -- Found 0 arguments here
   │

error: 

   ┌── tests/move_check/typing/declare_wrong_arity.move:5:13 ───
   │
 5 │         let x: ();
   │             ^ Unused local 'x'. Consider removing or prefixing with an underscore: '_x'
   │

error: 

   ┌── tests/move_check/typing/declare_wrong_arity.move:6:13 ───
   │
 6 │         let (): u64;
   │             ^^ Invalid list-binding. The list-binding expected 0 argument(s) but got 1
   ·
 6 │         let (): u64;
   │                 --- Found 1 arguments here
   │

error: 

   ┌── tests/move_check/typing/declare_wrong_arity.move:7:13 ───
   │
 7 │         let (x, b, R{f}): (u64, bool, R, R);
   │             ^^^^^^^^^^^^ Invalid list-binding. The list-binding expected 3 argument(s) but got 4
   ·
 7 │         let (x, b, R{f}): (u64, bool, R, R);
   │                           ----------------- Found 4 arguments here
   │

error: 

   ┌── tests/move_check/typing/declare_wrong_arity.move:8:13 ───
   │
 8 │         let (x, b, R{f}): (u64, bool);
   │             ^^^^^^^^^^^^ Invalid list-binding. The list-binding expected 3 argument(s) but got 2
   ·
 8 │         let (x, b, R{f}): (u64, bool);
   │                           ----------- Found 2 arguments here
   │

